--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">KrewUp</string>
     <string name="title_activity_main">KrewUp</string>
-    <string name="package_name">com.krewup.app</string>
-    <string name="custom_url_scheme">com.krewup.app</string>
+    <string name="package_name">com.chilsen.krewup</string>
+    <string name="custom_url_scheme">com.chilsen.krewup</string>
 </resources>
